[package]
name = "glopp"
version = "0.0.1"
authors = ["jim <jimshawster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "=0.3.10"
fxhash="*"
statrs="*"
rayon="*"
rand="*"
rand_core="*"
rust-htslib="*"
clap = "3"
debruijn = "*"
simple_logger="3"
log="*"
itertools = "*"
highs = { version = "*", optional = true }
block-aligner = { version = "*"}
petgraph = "*"
bio = "*"
bio-types ="*"
rust-lapper = "*"
disjoint-sets = "0.4.2"
ordered-float = "2.0"
flate2 = "*"
minilp = "*"

[features]
default = ["avx2"]
avx2 = ["block-aligner/simd_avx2"]
#TODO on release, put this in when Daniel updates the cargo repo
#sse2 = ["block-aligner/simd_sse2"]
neon = ["block-aligner/simd_neon"]

[target.'cfg(target_env = "musl")'.dependencies]
tikv-jemallocator = "0"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"

[profile.release]
codegen-units = 1

[profile.dev]
opt-level = 3

[profile.bench]
debug = true
