[package]
name = "floria"
version = "0.0.2"
authors = ["jim <jimshawster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "=0.3"
fxhash="0.2"
statrs="0.16"
rayon="1.7"
rand="0.8"
rand_core="0.6"
rust-htslib= { version = "0.44", default-features = false }
clap = "3"
debruijn = "0.3"
simple_logger="4"
log="0.4"
itertools = "0.10"
highs = { version = "*", optional = true }
block-aligner = { version = "0.4"}
petgraph = "0.6"
bio = "1.1"
bio-types ="0.13"
rust-lapper = "1.1"
disjoint-sets = "0.4.2"
ordered-float = "2.0"
flate2 = "1"
minilp = "0.2"
derivative = "2.2"

[features]
default = ["sse2"]
avx2 = ["block-aligner/simd_avx2"]
sse2 = ["block-aligner/simd_sse2"]
neon = ["block-aligner/simd_neon"]

[target.'cfg(target_env = "musl")'.dependencies]
tikv-jemallocator = "0"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
opt-level = 3

[profile.bench]
debug = true
